# AR25-BMS

./: .clangd  .gitignore  .gitmodules  .mxproject  AR25-BMS.ioc  AR25-BMS.map  CMakeCache.txt  CMakeLists.txt  STM32G473XX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json  libtinfo5_6.4-2_amd64.deb  readme.md
.cache/clangd/index/: CMakeCCompilerId.c.9133B3A626DF7471.idx  CMakeCXXCompilerId.cpp.09C7D5BD79890977.idx  SEGGER_RTT.c.49A464C5A3D32AA3.idx  SEGGER_RTT.c.7FFCC8D0B0373A57.idx  SEGGER_RTT.h.674CFB3E184F3CA1.idx  SEGGER_RTT.h.BB06CC9D31676DBD.idx  SEGGER_RTT_Conf.h.9397F0142D503542.idx  SEGGER_RTT_Conf.h.AA4AC1DC798C5B19.idx  SEGGER_RTT_printf.c.5E2E42D4FDD263C9.idx  SEGGER_RTT_printf.c.CEA882C18E294F10.idx  adc.c.587F5EE3454DEBF6.idx  adc.c.E014AAAA07428EE4.idx  adc.h.31E61457FC68E6C6.idx  adc.h.91FF819EEF1E2065.idx  align-utils.c.4618FAD089E42AAF.idx  align-utils.h.30F84F1B4ABFBCE3.idx  align.h.AEE4B1CCA4FD0A7A.idx  aligncan.c.0143EFE4AEE970E7.idx  aligncan.h.2B8B337696323D5B.idx  (+245 more)
Core/Inc/: RTE_Components.h  align-utils.h  align.h  aligncan.h  alignutils.h  battery_model.h  bms.h  bms_config.h  bms_statemachine.h  bq79600.h  bq79616.h  broadcasts.h  cordic.h  faults.h  icm.h  icm_regs.h  main.h  pid.h  quadspi.h  secondary_mcu.h  simulation.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  ts_statemachine.h  usb_logging.h
Core/Src/: adc.c  align-utils.c  aligncan.c  alignutils.c  battery_model.c  bms.c  bms_config.c  bms_statemachine.c  bq79600.c  broadcasts.c  cordic.c  crc.c  dma.c  fdcan.c  gpio.c  i2c.c  icm.c  main.c  pid.c  quadspi.c  secondary_mcu.c  simulation.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tim.c  ts_statemachine.c  usb_logging.c
USB_Device/App/: usbd_cdc_if.c  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
